# EcoSocialBee

./: Cargo.toml  Qwen_rust_20260210_1e3fkvgmg.rs  Qwen_rust_20260210_j3a3lro8u.rs  Qwen_rust_20260210_qar5ojutp.rs  README.md  bostrom-sovereign-kernel-v2.ndjson
aln/: HiveEcoEnvelope2026v1.aln  NeurorightsForBeesTemplate2026v1.aln  neurorights.bees.apis_mellifera.v1.aln  neurorights.bees.template.v1.aln
bee_safety_kernel/: Cargo.toml
bee_safety_kernel/src/: lib.rs  main.rs
beecorridor_core/src/: lib.rs  risk.rs
crates/beecorridor_router/: Cargo.toml
crates/beecorridor_router/src/: main.rs
crates/ecosocialbee_core/: Cargo.toml
crates/ecosocialbee_core/src/: lib.rs
crates/hive_guard/: Cargo.toml
crates/hive_guard/src/: lib.rs
docs/: EcoSocialBee.md
examples/: simulate_farm_scenario.rs
opt/bee_chain/node/: biophysical_blockchain.rs
policy/: neuro-consent-fear-bee-human.aln
qpudatashards/particles/: PhoenixBeeAirspace2026v1.csv
qpudatashards/particles/include/: BeePolytopeGuard.hpp
qpudatashards/particles/src/: BeePolytopeGuard.cpp
