[workspace]
members = [
    "crates/hive_guard",
    "crates/ecosocialbee_core",
    "crates/beecorridor_router",
]

[workspace.package]
edition = "2021"
authors = ["EcoSocialBee Contributors"]
license = "Apache-2.0"
repository = "https://github.com/example/EcoSocialBee"
homepage = "https://github.com/example/EcoSocialBee"
description = "Cybernetical-Honeybees: eco-safe Rust + ALN stack for bee-centered environmental intelligence."

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1.0"
