[package]
name = "hive_guard"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "HiveEnvelope and HiveSystemAdjustment with bee-rights invariants."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
